--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -52,6 +52,7 @@
           size="medium"
           [disabled]="loginForm.invalid"
           (click)="onSignIn()"
+          expand="full"
         >
           Sign Up
         </ion-button>
