--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,11 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+:root {
+  --ion-color-primary: #800020; /* Rouge bordeaux */
+  --ion-color-primary-rgb: 128, 0, 32;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #6b001a;
+  --ion-color-primary-tint: #92002a;
+}
