--- a/src/app/car/car.page.html
+++ b/src/app/car/car.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Car</ion-title>
+    <ion-title>Voiture</ion-title>
     <ion-buttons slot="end">
       <ion-icon
         id="icon-add"
