--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -6,15 +6,14 @@
 
 <ion-content [fullscreen]="true" class="register">
   <div>
-    <form [formGroup]="registerForm">
+    <form [formGroup]="registerForm" class="register-form">
       <ion-item>
         <ion-input
-          label="Fullname"
-          labelPlacement="stacked"
+          label="Nom complet"
+          label-placement="stacked"
           placeholder="John Doe"
           formControlName="fullName"
-        >
-        </ion-input>
+        />
       </ion-item>
       @if (registerForm.get('fullName')?.dirty) { @if
       (registerForm.get('fullName')?.errors?.['required']) {
@@ -28,11 +27,10 @@
       <ion-item>
         <ion-input
           label="E-mail"
-          labelPlacement="stacked"
+          label-placement="stacked"
           placeholder="email@example.com"
           formControlName="email"
-        >
-        </ion-input>
+        />
       </ion-item>
       @if (registerForm.get('email')?.dirty) { @if
       (registerForm.get('email')?.errors?.['required']) {
@@ -43,18 +41,17 @@
 
       <ion-item>
         <ion-input
-          label="Password"
-          labelPlacement="stacked"
+          label="Mot de passe"
+          label-placement="stacked"
           [type]="passwordType"
           placeholder="***********"
           formControlName="password"
-        >
-        </ion-input>
+        />
         <ion-icon
           id="icon-eye"
           [name]="passwordIcon"
           (click)="onToggleShowPassword()"
-        ></ion-icon>
+        />
       </ion-item>
       @if (registerForm.get('password')?.dirty) { @if
       (registerForm.get('password')?.errors?.['required']) {
@@ -71,7 +68,7 @@
           [disabled]="registerForm.invalid"
           (click)="onSignUp()"
         >
-          Sign Up
+          S'inscrire
         </ion-button>
       </div>
     </form>
