--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -4,3 +4,14 @@
   align-items: center;
   width: 100%;
 }
+
+.span-error {
+  color: red;
+  font-size: 12px;
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
