--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -18,9 +18,9 @@
       </ion-item>
       @if (loginForm.get('email')?.dirty) { @if
       (loginForm.get('email')?.errors?.['required']) {
-      <span class="span-error">This field is required</span>
+      <span class="span-error">{{requiredFieldMessage}}</span>
       } @if (loginForm.get('email')?.errors?.['email']) {
-      <span class="span-error">Your e-mail is invalid.</span>
+      <span class="span-error">Veuillez entrer une adresse e-mail valide</span>
       } }
 
       <ion-item>
@@ -40,10 +40,10 @@
       </ion-item>
       @if (loginForm.get('password')?.dirty) { @if
       (loginForm.get('password')?.errors?.['required']) {
-      <span class="span-error">This field is required</span>
+      <span class="span-error">{{requiredFieldMessage}}</span>
       } @if (loginForm.get('password')?.errors?.['minlength']) {
       <span class="span-error"
-        >Your password should be strong with at least 08 characters.</span
+        >Votre mot de passe doit contenir au moins 8 caractères</span
       >
       } }
 
@@ -52,9 +52,8 @@
           size="medium"
           [disabled]="loginForm.invalid"
           (click)="onSignIn()"
-          expand="full"
         >
-          Sign Up
+          Se connecter
         </ion-button>
       </div>
     </form>
