--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,10 +2,10 @@
 // http://ionicframework.com/docs/theming/
 
 :root {
-  --ion-color-primary: #800020; /* Rouge bordeaux */
-  --ion-color-primary-rgb: 128, 0, 32;
+  --ion-color-primary: #25424d;
+  --ion-color-primary-rgb: 37, 66, 77;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #6b001a;
-  --ion-color-primary-tint: #92002a;
+  --ion-color-primary-shade: #1f373f;
+  --ion-color-primary-tint: #3b5b6a;
 }
