--- a/src/app/car/car.page.html
+++ b/src/app/car/car.page.html
@@ -13,15 +13,26 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
-    @for(car of cars; track car) {
-    <ion-item>
-      <ion-label>
-        <h2>{{ car.marque }}</h2>
-        <p>{{ car.model }}</p>
-        <p>{{car.plate}}</p>
-      </ion-label>
-    </ion-item>
-    }
-  </ion-list>
+  <ion-grid>
+    <ion-row>
+      @for(car of cars; track car) {
+      <ion-col size="12">
+        <ion-card>
+          <img
+            alt="Silhouette of mountains"
+            src="https://ionicframework.com/docs/img/demos/card-media.png"
+          />
+          <ion-card-header>
+            <ion-card-title>{{ car.plate }}</ion-card-title>
+            <ion-card-subtitle
+              >{{ car.marque }} {{ car.model }}</ion-card-subtitle
+            >
+          </ion-card-header>
+
+          <ion-card-content> description </ion-card-content>
+        </ion-card>
+      </ion-col>
+      }
+    </ion-row>
+  </ion-grid>
 </ion-content>
