--- a/src/app/car/new-car/new-car.page.html
+++ b/src/app/car/new-car/new-car.page.html
@@ -65,11 +65,30 @@
       >
       } }
 
+      <ion-item>
+        <ion-input
+          label="Photo avant"
+          labelPlacement="stacked"
+          (change)="onFileChange($event, 'frontPicture')"
+        >
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-input
+          label="Photo arrière"
+          labelPlacement="stacked"
+          (change)="onFileChange($event, 'backPicture')"
+        >
+        </ion-input>
+      </ion-item>
+
       <div class="container-button">
         <ion-button
           size="medium"
           [disabled]="carForm.invalid"
           (click)="onSave()"
+          onkeypress="onSave()"
         >
           Enregistrer
         </ion-button>
