add front and back picture to car detaiol

--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -117,4 +117,10 @@
       </div>
     </form>
   </div>
+
+  <div class="login-link">
+    <p>
+      Vous avez déjà un compte ? <a (click)="navigateToLogin()">Se connecter</a>
+    </p>
+  </div>
 </ion-content>
