--- a/src/app/car/car.page.html
+++ b/src/app/car/car.page.html
@@ -17,7 +17,7 @@
     <ion-row>
       @for(car of cars; track car) {
       <ion-col size="12">
-        <ion-card>
+        <ion-card (click)="viewCarDetail(car.plate)">
           <img
             alt="Silhouette of mountains"
             src="https://ionicframework.com/docs/img/demos/card-media.png"
