--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -15,3 +15,13 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.login-link {
+  text-align: center;
+  margin-top: 16px;
+
+  a {
+    color: var(--ion-color-primary);
+    text-decoration: none;
+  }
+}
