add go back button

--- a/src/app/car/car-detail/car-detail.page.html
+++ b/src/app/car/car-detail/car-detail.page.html
@@ -1,6 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Car Detail</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button
+        icon="caret-back"
+        (click)="goToCarPage()"
+      ></ion-back-button>
+    </ion-buttons>
+    <ion-title>Détail</ion-title>
   </ion-toolbar>
 </ion-header>
 
