--- a/src/app/car/new-car/new-car.page.html
+++ b/src/app/car/new-car/new-car.page.html
@@ -1,7 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button icon="caret-back"></ion-back-button>
+      <ion-back-button
+        icon="caret-back"
+        (click)="goToCarPage()"
+      ></ion-back-button>
     </ion-buttons>
     <ion-title>Création d'une nouvelle voiture</ion-title>
   </ion-toolbar>
