--- a/src/app/car/new-car/new-car.page.html
+++ b/src/app/car/new-car/new-car.page.html
@@ -85,6 +85,9 @@
         >
         </ion-input>
       </ion-item>
+      @if (picutreErrorMessage) {
+      <span class="span-error">{{ picutreErrorMessage }}</span>
+      }
 
       <div class="container-button">
         <ion-button
