--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -58,4 +58,11 @@
       </div>
     </form>
   </div>
+
+  <div class="login-link">
+    <p>
+      Vous n'avez pas encore de compte ?
+      <a (click)="navigateToRegister()">S'inscrire</a>
+    </p>
+  </div>
 </ion-content>
