--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,8 +5,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="login">
-  <div>
-    <form [formGroup]="loginForm">
+  <div class="form-box">
+    <form [formGroup]="loginForm" class="login-form">
       <ion-item>
         <ion-input
           label="E-mail"
