--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="register">
-  <div>
+  <div class="form-box">
     <form [formGroup]="registerForm" class="register-form">
       <ion-item>
         <ion-input
