--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,4 +8,5 @@
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #1f373f;
   --ion-color-primary-tint: #3b5b6a;
+  --ion-background-color: #f7f7f7; // Gris très léger
 }
