--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -25,7 +25,7 @@
 
       <ion-item>
         <ion-input
-          label="Password"
+          label="Mot de passe"
           labelPlacement="stacked"
           [type]="passwordType"
           placeholder="***********"
